--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background-color: #171921;
+    --background-color: #1e202a;
     --text-color: #f8f8f2;
     --link-color: #8be9fd;
   }
